Broken <label>:<input> alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -265,15 +265,17 @@ img{
 	max-width: 100%;
 	color: white;
 	justify-content: center;
-	align-items: center;
+	align-items: left;
+	margin-left: 16.8%;
 	flex-direction:column;
 	gap: 10px;
 	z-index: 1;
+	/* border: 1px solid blue; */
 
 }
 
 #boxOfInputs input{
-	width:70%;
+	width:80%;
 	height:10%;
 
 }
@@ -287,9 +289,9 @@ img{
 
 
 label{
-	color: #000000;
-	transform: translate(0%,0%);
 	width:50%;
+	transform: translate(30%,180%);
+	color:rgba(85, 85, 85, 0.677);
 	max-width: 20%;
 	
 }
